# sqlitemapper

./: Cargo.toml
.cargo/: config.toml
core/: Cargo.toml
core/src/: from_row.rs  insert.rs  lib.rs  query.rs
core/src/types/: column.rs  convert.rs  mod.rs  sql.rs  sql_type.rs  sql_type_list.rs
example/: Cargo.toml  schema.sql
example/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs  query.rs  schema.rs  util.rs
schema/: Cargo.toml
schema/src/: ffi.rs  lib.rs  schema.rs  statement.rs
