[package]
name = "sqlitemapper-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
sqlitemapper-schema = { path = "../schema" }

derive_more = "0.99"
derive-syn-parse = "0.1.5"
lazy_static = "1.4"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
thiserror = "1.0"
darling = "0.20.3"
